# rust-glpk-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HEXALY_LICENSE_SETUP.md  HEXALY_QUICKSTART.md  LICENSE  Makefile  README.md  push_dockerhub.sh  run-all-solvers.sh  setup-hexaly.sh  test.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-docker.yml  push.yml  version-check.yml
clients/Rust/: Cargo.toml  LICENSE  README.md
clients/Rust/examples/: basic_usage.rs  with_authentication.rs
clients/Rust/src/: builder.rs  client.rs  error.rs  lib.rs  types.rs
deploy/: .env.example  Dockerfile  Dockerfile.glpk  Dockerfile.gurobi  Dockerfile.highs  Dockerfile.multi  compose.yaml
hexaly/: Cargo.toml  QUICK_START.md  README.md
hexaly-sys/: Cargo.toml  build.rs  hexaly_wrapper.cpp  hexaly_wrapper.h
hexaly-sys/src/: lib.rs
hexaly/src/: lib.rs
src/: convert.rs  main.rs  memory_tracker.rs  models.rs  solve.rs
src/domain/: mod.rs  solve.rs  solver.rs  solver_factory.rs  validate.rs
src/domain/solvers/: glpk_solver.rs  gurobi_solver.rs  hexaly_solver.rs  highs_solver.rs  mod.rs
static/: docs.html
tests/: integration_tests.rs
