[package]
name = "rust-glpk"
version = "0.1.8"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
glpk-rust = "0.1.12"
sentry = { version = "0.34", default-features = false, features = ["backtrace","contexts","panic","rustls"] }
sentry-actix = "0.34"


[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serial_test = "3.0"
