[package]
name = "rust-glpk"
version = "0.1.7"
edition = "2021"

[features]
default = []
highs-solver = ["highs", "highs-sys"]
gurobi-solver = ["grb"]
hexaly-solver = ["hexaly"]

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
glpk-rust = "0.1.12"
highs = { version = "1.8.1", optional = true }
highs-sys = { version = "1.8.1", optional = true }
grb = { version = "1.3", optional = true }
hexaly = { path = "hexaly", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serial_test = "3.0"
