[package]
name = "rust-solver-api"
version = "0.1.10"
edition = "2021"

[features]
default = []
highs-solver = ["highs-sys"]
gurobi-solver = ["grb"]

[dependencies]
actix-web = "4.11.0"
tokio = "1.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
glpk-rust = "0.1.13"
sentry = { version = "0.34", default-features = false, features = ["backtrace","contexts","panic","rustls","reqwest"] }
sentry-actix = "0.34"
highs-sys = { version = "1.8.1", optional = true }
grb = { version = "1.3", optional = true }
lru = "0.12"
parking_lot = "0.12"
subtle = "2.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serial_test = "3.0"
