[package]
name = "glpk-api-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Rikard Olsson <rikard@ourstudio.com>"]
description = "Rust client SDK for GLPK REST API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ourstudio-se/rust-glpk-api"
keywords = ["glpk", "linear-programming", "optimization", "api-client"]
categories = ["api-bindings", "mathematics"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"
